Changed the look of portfolio title and subtitle in timeline screen. [#69517544]