@@ -23,27 +23,23 @@ public class UserBaseDTO extends ExtendedDTO
 
     public UserRelationDTO relationship;
 
-    //TODO fake data,may need to change
-    //public boolean isFreeUser;
-
     public UserBaseDTO()
     {
     }
 
-    @JsonIgnore
-    public UserBaseKey getBaseKey()
+    @JsonIgnore public UserBaseKey getBaseKey()
     {
         return new UserBaseKey(id);
     }
 
     @Override public int hashCode()
     {
-        return new Integer(id).hashCode();
+        return Integer.valueOf(id).hashCode();
     }
 
     @Override public boolean equals(Object other)
     {
-        return (other instanceof UserBaseDTO) && (new Integer(id)).equals(((UserBaseDTO) other).id);
+        return (other instanceof UserBaseDTO) && Integer.valueOf(id).equals(((UserBaseDTO) other).id);
     }
 
     @Override public String toString()
